# ChangeLog for media-libs/libgphoto2
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.147 2009/05/16 08:03:02 robbat2 Exp $

  16 May 2009; Robin H. Johnson <robbat2@gentoo.org>
  libgphoto2-2.4.3.ebuild, libgphoto2-2.4.4.ebuild:
  Migration to virtual/libusb. Verified by code inspection.

  05 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/libgphoto2-2.4.0-as-needed.patch,
  -files/libgphoto2-2.4.0-udev-rules-fix4.diff, -libgphoto2-2.4.1-r1.ebuild,
  -libgphoto2-2.4.2.ebuild, libgphoto2-2.4.4.ebuild:
  Honor exif USE flag, bug #259196. Remove old revisions.

  16 Feb 2009; Brent Baude <ranger@gentoo.org> libgphoto2-2.4.3.ebuild:
  Marking libgphoto2-2.4.3 ppc for bug 255825

  07 Feb 2009; Jeroen Roovers <jer@gentoo.org> libgphoto2-2.4.3.ebuild:
  Stable for HPPA (bug #255825).

  04 Feb 2009; Raúl Porcel <armin76@gentoo.org> libgphoto2-2.4.3.ebuild:
  ia64/sparc stable wrt #255825

*libgphoto2-2.4.4 (31 Jan 2009)

  31 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +libgphoto2-2.4.4.ebuild:
  Bump to 2.4.4. Lot of changes on PTP2 driver and bug fixes.

  25 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  libgphoto2-2.4.3.ebuild:
  Stable on alpha, bug #255825

  25 Jan 2009; Brent Baude <ranger@gentoo.org> libgphoto2-2.4.3.ebuild:
  Marking libgphoto2-2.4.3 ppc64 for bug 255825

  25 Jan 2009; Markus Meier <maekke@gentoo.org> libgphoto2-2.4.3.ebuild:
  amd64/x86 stable, bug #255825

  04 Dec 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +files/libgphoto2-2.4.3-gcc43.patch, libgphoto2-2.4.3.ebuild:
  Fix compilation with gcc 4.3, bug #249677.

*libgphoto2-2.4.3 (29 Nov 2008)

  29 Nov 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -files/libgphoto2-2.1.2-norpm.patch,
  -files/libgphoto2-2.2.0-includes.patch,
  -files/libgphoto2-2.2.1-backported-udev-fixes.diff,
  -files/libgphoto-2.2.1-new-dbus-api.patch,