@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libgphoto2
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.147 2009/05/16 08:03:02 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libgphoto2/ChangeLog,v 1.148 2009/05/16 08:55:25 hanno Exp $
+
+*libgphoto2-2.4.5 (16 May 2009)
+
+  16 May 2009; Hanno Boeck <hanno@gentoo.org> +libgphoto2-2.4.5.ebuild:
+  Version bump, remove upstream applied patches, change virtual/libusb
+  dependency to SLOT.
 
   16 May 2009; Robin H. Johnson <robbat2@gentoo.org>
   libgphoto2-2.4.3.ebuild, libgphoto2-2.4.4.ebuild:
